--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="UTF-8">
     <link rel="icon" href="/favicon.ico">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport"
+          content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"/>
+
     <title>Poneglyph 🪦</title>
-  </head>
-  <body class="dark:bg-gray-700 dark:border-gray-600">
-    <div id="app"></div>
-    <script type="module" src="/src/main.ts"></script>
-  </body>
+</head>
+<body class="dark:bg-gray-700 dark:border-gray-600">
+<div id="app"></div>
+<script type="module" src="/src/main.ts"></script>
+</body>
 </html>
